2012-09-15  Borut Razem  <borutr@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/gpasm.c, gpasm/gpasm.h.in,
    gpasm/testsuite/test: 
    introdiced --mpasm-compatible command line option
  * gpasm/lst.c, gpasm/coff.c: fixed #255 Bug #227 regressed

2012-09-14  Molnar Karoly  <proton7@freemail.hu>
  * doc/html-help/Makefile.am, doc/html-help/Makefile.in:
    Renamed the config-help.pl to device-help.pl.

2012-09-14  Molnar Karoly  <proton7@freemail.hu>
  * lkr/16f873_g.lkr, lkr/16f873a_g.lkr, lkr/16f874_g.lkr,
    lkr/16f874a_g.lkr: Added "NAME=gpr[0-2]" sections. Added the new
    "#IFDEF _DEBUGDATASTART" section. Changed more lines in the
    original "#IFDEF _DEBUGDATASTART" section.

2012-09-14  Molnar Karoly  <proton7@freemail.hu>
  * lkr/16f73_g.lkr, lkr/16f74_g.lkr: Changed the "NAME=sfr2" and
    "NAME=sfr3" sections. Added the new "#IFDEF _DEBUGDATASTART" section.
    Changed more lines in the original "#IFDEF _DEBUGDATASTART" section.

2012-09-12  Molnar Karoly  <proton7@freemail.hu>
  * gputils.spec.in: Configure with --disable-html-doc option.

2012-09-12  Molnar Karoly  <proton7@freemail.hu>
  * gputils.spec.in: Revert changes.

2012-09-11  Molnar Karoly  <proton7@freemail.hu>
  * AUTHORS: updated
  * doc/html-help/Makefile.am, configure.ac:
    Implemented the --disable-html-doc configure option.
  * gputils.spec.in: modified
  * doc/html-help/Makefile.in, doc/Makefile.in, Makefile.in,
    configure: updated autotools

2012-09-11  Molnar Karoly  <proton7@freemail.hu>
  * doc/html-help, doc/html-help/Makefile.am:
    Implemented html help for PIC devices.
  * doc/Makefile.am: modified
  * configure.ac, configure, doc/Makefile.in,
    doc/html-help/Makefile.in: updated autotools

2012-09-11  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/gperror.c: fixed gperror -> gpverror
  * gpasm/directive.c: implemented dtm directive,
    from "Release Notes for MPASM Assembler v5.45":